# vools

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  NOTICE  README.md  USER_GUIDE.md  pyproject.toml  requirements.txt  setup.py
tests/: __init__.py  test_curried.py  test_curry_overload.py  test_data.py  test_datetime.py  test_decorators.py  test_functional.py  test_functional_simple.py  test_import.py  test_main_import.py  test_oop.py  test_overcurry_vic.py  test_placeholder.py  test_shotcut.py  test_stuff.py  test_utils.py  test_vools.py
vools/: __init__.py  __main__.py  config.template.py  shotcut.py  vools.py
vools/data/: __init__.py  seq.py
vools/datetime/: __init__.py  dates_format.py  mydate.py  mydates.py  range.py  utils.py
vools/decorators/: __init__.py  cache.py  control.py  curried.py  curry_core.py  curry_delay.py  extend.py  lazy.py  overcurry.py  overload.py  overloads.py  selector.py  trd.py
vools/decorators/__persist__/: weather_beijing.json
vools/functional/: __init__.py  arrow_func.py  box.py  funcs.py  iif.py  placeholder.py
vools/oop/: __init__.py  calltype.py  extend.py  mixer.py  selector.py
vools/utils/: __init__.py  stuff.py
