[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vools"
dynamic = ["version"]
authors = [
    { name = "Victor", email = "victortop921129@gmail.com" },
]
description = "Python 函数式编程工具集"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Functional Programming",
]
requires-python = ">=3.6"
dependencies = [
    "wrapt==1.10.11",
    "pandas>=0.22.0",
    "numpy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest==3.3.2",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort==4.2.15",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
vools = "vools.__main__:main"

[project.urls]
"Homepage" = "https://github.com/vicTop-cw/vools"
"Repository" = "https://github.com/vicTop-cw/vools"
"Issues" = "https://github.com/vicTop-cw/vools/issues"
